[package]
authors = ["I am the Carl <jamescarl96@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "lesson1"
version = "0.1.0"

[dependencies]
msp432p401r = "0.1.2"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"

# This is a ptach for the untagged-option crate, which the cortex-m crate depends on.
[patch.crates-io]
untagged-option = { git = "https://github.com/jonas-schievink/untagged-option.git", rev = "80adfcf2874848060c14b561d669187c2a7cbacc" }

# this lets you use `cargo fix`!
[[bin]]
name = "lesson1"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
