[package]
authors = ["I am the Carl <jamescarl96@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "lesson1"
version = "0.1.0"

[dependencies]
msp432p401r = { git = "https://github.com/MSP432P401R-Launchpad-Rust/MSP432P401R-Peripheral-Access-API", features = ["rt"] }
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"

# this lets you use `cargo fix`!
[[bin]]
name = "lesson1"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
